[package]
name = "garlic-cli"
authors = ["Pascal d'Achard <pasdachard@gmail.com>"]
license = "MIT OR Apache-2.0"
version = "0.2.1"
description = "A CLI tool for the 'garlic' template"
readme = "README.md"
homepage = "https://github.com/eatenpancreas/garlic-cli"
repository = "https://github.com/eatenpancreas/garlic-cli"
keywords = ["cli", "garlic", "template"]
categories = ["command-line-utilities"]
edition = "2021"

[[bin]]
name = "garlic"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
derived-deref = "2.1.0"
dialoguer = "0.11.0"
percent-encoding = "2.3.1"
postgres = "0.19.10"
rand = "0.9.0"
strum_macros = "0.27.1"
strum = { version = "0.27.1", features = ["derive"] }
tempdir = "0.3.7"
